--- a/index.html
+++ b/index.html
@@ -341,208 +341,6 @@
 
     */
     <!-- Portfolio Section -->
-   <!-- ================================================== --> -->
-    <!-- <section id="portfolio">
-      <div class="row">
-        <div class="twelve columns collapsed">
-          <h1>Check Out Some of My Works.</h1>
-
-          <!-- portfolio-wrapper -->
-          <!-- <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
-            <div class="columns portfolio-item">
-              <div class="item-wrap">
-                <a href="#modal-01" title="">
-                  <img alt="" src="images/portfolio/IndiaMart.png" />
-                  <div class="overlay">
-                    <div class="portfolio-item-meta">
-                      <h5>India Mart</h5>
-                      <p>e-commerse</p>
-                    </div>
-                  </div>
-                  <div class="link-icon"><i class="icon-plus"></i></div>
-                </a>
-              </div>
-            </div>
-            <!-- item end -->
-<!-- 
-            <div class="columns portfolio-item">
-              <div class="item-wrap">
-                <a href="#modal-02" title="">
-                  <img alt="" src="images/portfolio/Coursera.png" />
-                  <div class="overlay">
-                    <div class="portfolio-item-meta">
-                      <h5>Coursera</h5>
-                      <p>e-commerse</p>
-                    </div>
-                  </div>
-                  <div class="link-icon"><i class="icon-plus"></i></div>
-                </a>
-              </div>
-            </div> -->
-            <!-- item end -->
-<!-- 
-            <div class="columns portfolio-item">
-              <div class="item-wrap">
-                <a href="#modal-03" title="">
-                  <img alt="" src="images/portfolio/foodApp.png" />
-                  <div class="overlay">
-                    <div class="portfolio-item-meta">
-                      <h5>Circle.com</h5>
-                      <p>Web site</p>
-                    </div>
-                  </div>
-                  <div class="link-icon"><i class="icon-plus"></i></div>
-                </a>
-              </div>
-            </div> -->
-            <!-- item end -->
-
-            <!-- <div class="columns portfolio-item">
-              <div class="item-wrap">
-                <a href="#modal-04" title="">
-                  <img alt="" src="images/portfolio/unsplash.png" />
-                  <div class="overlay">
-                    <div class="portfolio-item-meta">
-                      <h5>Unsplash</h5>
-                      <p>Web site</p>
-                    </div>
-                  </div>
-                  <div class="link-icon"><i class="icon-plus"></i></div>
-                </a>
-              </div>
-            </div>
-            <!-- item end -->
-          </div>
-          <!-- portfolio-wrapper end -->
-        </div> -->
-        <!-- twelve columns end -->
-
-        <!-- Modal Popup
-	      --------------------------------------------------------------- -->
-<!-- 
-        <div id="modal-01" class="popup-modal mfp-hide">
-          <img
-            class="scale-with-grid"
-            src="images/portfolio/modals/IndiaMart.png"
-            alt=""
-          />
-
-          <div class="description-box"> -->
-            <!-- <h4>India Mart</h4>
-            <p>
-              This is India's largest online marketplace which connects buyers
-              with suppliers (E-commerce website).
-            </p> --> -->
-            <!-- <span class="categories"><i class="fa fa-tag"></i>Branding, Webdesign</span> -->
-          <!-- </div>
-
-          <div class="link-box">
-            <a href="https://sad-elion-e4c9b5.netlify.app/" target="_blank"
-              >Go-Live</a
-            >
-            <a href="https://github.com/jaySanodiya/India_mart" target="_blank"
-              >Git-Hub</a
-            >
-            <a class="popup-modal-dismiss">Close</a>
-          </div>
-        </div>
-        <!-- modal-01 End -->
-<!-- 
-        <div id="modal-02" class="popup-modal mfp-hide">
-          <img
-            class="scale-with-grid"
-            src="images/portfolio/modals/Coursera.png"
-            alt=""
-          />
-
-          <div class="description-box">
-            <h4>Coursera</h4>
-            <p>
-              Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin,
-              lorem quis bibendum auctor, nisi elit consequat ipsum, nec
-              sagittis sem nibh id elit.
-            </p>
-          </div>
-
-          <div class="link-box">
-            <a href="https://clonecoursera.netlify.app" target="_blank"
-              >Go-Live</a
-            >
-            <a
-              href="https://github.com/jaySanodiya/coursera-clone"
-              target="_blank"
-              >Git-Hub</a
-            >
-            <a class="popup-modal-dismiss">Close</a>
-          </div>
-        </div>
-        <!-- modal-02 End -->
-
-        <!-- <div id="modal-03" class="popup-modal mfp-hide">
-          <img
-            class="scale-with-grid"
-            src="images/portfolio/modals/foodApp.png"
-            alt=""
-          /> -->
-
-          <!-- <div class="description-box">
-            <h4>Food App</h4>
-            <p>
-              Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin,
-              lorem quis bibendum auctor, nisi elit consequat ipsum, nec
-              sagittis sem nibh id elit.
-            </p>
-          </div>
-
-          <div class="link-box">
-            <a href="https://eager-morse-ee7970.netlify.app" target="_blank"
-              >Go-Live</a
-            >
-            <a
-              href="https://github.com/jaySanodiya/JavaScript-mini-projects/tree/main/Food_App"
-              target="_blank"
-              >Git-Hub</a
-            <!-- > -->
-            <!-- <a class="popup-modal-dismiss">Close</a>
-          </div>
-        </div> --> --> -->
-        <!-- modal-03 End -->
-
-        <!-- <div id="modal-04" class="popup-modal mfp-hide">
-          <img
-            class="scale-with-grid"
-            src="images/portfolio/modals/unsplash.png"
-            alt=""
-          /> -->
-<!-- 
-          <div class="description-box">
-            <h4>Unsplash app</h4>
-            <p>
-              High quality images are available in this app, I've use debouncing
-              property to fetch data by calling throung API. --> -->
-            <!-- </p>
-          </div>
-
-          <div class="link-box">
-            <a
-              href="https://angry-lichterman-0c0aa6.netlify.app/"
-              target="_blank"
-              >Go-Live</a
-            >
-            <a
-              href="https://github.com/jaySanodiya/JavaScript-mini-projects/tree/main/Unsplash%20Clone"
-              target="_blank"
-              >Git-Hub</a
-            >
-            <a class="popup-modal-dismiss">Close</a>
-          </div>
-        </div>
-        <!-- modal-04 End -->
-      </div>
-      <!-- row End -->
-    </section> -->
-   / <!-- Portfolio Section End -->
-   
 
     <!-- Testimonials Section
    ================================================== -->
@@ -693,7 +491,7 @@
         <div class="twelve columns">
           <ul class="social-links">
             <li>
-              <a href="https://www.linkedin.com/in/jay-sanodiya/"
+              <a href="https://www.linkedin.com/in/priyanka-sanodiya/"
                 ><i class="fa fa-linkedin fa-2x"></i
               ></a>
               <h5>Priyanka-Sanodiya</h5>
