--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
           <div class="projectlinks">
             <a href="https://github.com/priyankasanodiya14/Bus-Ticket-Reservation-System" class="project-github-link"><i
                 class='bx bxl-github'></i></a>
-            <!-- <a href="https://drive.google.com/file/d/1aKelxvuD9YeLWIFPguvz-sM_ysY8lJh4/view" class="project-deployed-link"><i
-                class='bx bxl-netlify'></i></a> -->
+            <a href="https://github.com/priyankasanodiya14/Bus-Ticket-Reservation-System" class="project-deployed-link"><i
+                class='bx bxl-netlify'></i></a>
           </div>
 
         </div>
