--- a/index.html
+++ b/index.html
@@ -336,22 +336,21 @@
 
         </div>
       </div>
-      <!-- <div class="project-card">
-        <img src="./hr.png" alt="HR">
+      <div class="project-card">
+        <img src="./Customer.png" alt="HR">
         <div class="project-layer">
-          <h4 class="project-title">Human Resource Management System</h4>
-          <p class="project-description">\Human Resource Management System is a console based Java project
-            which includes both user and admin side.</p>
-          <h5 class="project-tech-stack">Java | MySQL | Hibernate | JPA | JDBC</h5>
+          <h4 class="project-title">Online Customer Service Support System</h4>
+          <p class="project-description">\ Online Customer Service Support System is a Java project build with Spring Boot and Spring Security</p>
+          <h5 class="project-tech-stack">Java | MySQL | SpringBoot | JPA | Lombok | Spring Security</h5>
           <div class="projectlinks">
-            <a href="https://github.com/priyankasanodiya14" class="project-github-link"><i
+            <a href="https://github.com/priyankasanodiya14/deluxe-change-1738" class="project-github-link"><i
                 class='bx bxl-github'></i></a>
-            <a href="https://drive.google.com/file/d/1Qv3s8Y7v5mMgg-zM8TvcIdqzo6TtCpoC/view?usp=sharing" class="project-deployed-link"><i
+            <a href="https://github.com/priyankasanodiya14/deluxe-change-1738" class="project-deployed-link"><i
                 class='bx bxl-netlify'></i></a>
           </div>
 
         </div>
-      </div> -->
+      </div>
       <!-- <div class="project-card">
         <img src="./images/Chat App.png" alt="">
         <div class="project-layer">
