--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
           <div class="projectlinks">
             <a href="https://github.com/priyankasanodiya14/deluxe-change-1738" class="project-github-link"><i
                 class='bx bxl-github'></i></a>
-            <a href="https://github.com/priyankasanodiya14/deluxe-change-1738" class="project-deployed-link"><i
+            <a href="https://drive.google.com/file/d/1tL2C9sAUB8FNb7jJHOgWslhILOnvG1KZ/view" class="project-deployed-link"><i
                 class='bx bxl-netlify'></i></a>
           </div>
 
