--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
     </h2>
     <div class="project-container">
       <div class="project-card">
-        <img src="./Credhut.png" alt="">
+        <img src="./Credhut.png" alt="cred">
         <div class="project-layer">
           <h4 class="project-title">Credhut-FingerHut Clone</h4>
           <p class="project-description"> Credhut is a web application that was built with the basic web tech stack for my web development class. We wanted to build this web app to help people have a better experience and more functionalities while browsing the product.</p>
@@ -306,7 +306,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./holaex.png" alt="">
+        <img src="./holaex.png" alt="hola">
         <div class="project-layer">
           <h4 class="project-title">Hola-ex</h4>
           <p class="project-description">Hola-ex is a web application that was built with the basic web tech stack for my web development class. We wanted to build this web app to help people have a better experience and more functionalities while browsing the product.</p>
@@ -321,7 +321,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./Screenshot (521).png" alt="">
+        <img src="./Screenshot (521).png" alt="cc">
         <div class="project-layer">
           <h4 class="project-title">Bus Ticket Reservation Management System</h4>
           <p class="project-description">Bus Ticket Reservation Management System is a console based
@@ -337,7 +337,7 @@
         </div>
       </div>
       <div class="project-card">
-        <img src="./Customer.png" alt="HR">
+        <img src="./Customer.png" alt="cR">
         <div class="project-layer">
           <h4 class="project-title">Online Customer Service Support System</h4>
           <p class="project-description">\ Online Customer Service Support System is a Java project build with Spring Boot and Spring Security</p>
