--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             <span> || </span>
             <a
               class="project-deployed-link"
-              href="https://drive.google.com/file/d/1NEGuIACK7DYjgxFXoHr2FEegUQot7kZ_/view?pli=1"
+              href="https://drive.google.com/file/d/1tL2C9sAUB8FNb7jJHOgWslhILOnvG1KZ/view"
               target="_blank"
             >
               Demo</a
